--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=4000
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_mysql_password
+DB_PASSWORD=Ismail28@
 DB_NAME=justnaik
-JWT_SECRET=Ismail28
+JWT_SECRET=secretkey
 CORS_ORIGIN=http://localhost:3000
